<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:gravity="center"
        android:layout_margin="@dimen/onespace"
        android:padding="@dimen/onespace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:textColor="@color/colorBlanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_titulo"
            android:gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="@dimen/h1"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/threspace"

            />

        <TextView
            android:textColor="@color/colorBlanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_info1"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:textSize="@dimen/h4"
            android:layout_marginBottom="@dimen/threspace"
            />
        <TextView
            android:textColor="@color/colorBlanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_info2"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:textSize="@dimen/h4"
            android:layout_marginBottom="@dimen/threspace"
            />
        <TextView
            android:textColor="@color/colorBlanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_info3"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:textSize="@dimen/h4"
            android:layout_marginBottom="@dimen/threspace"
            />
        <TextView
            android:textColor="@color/colorBlanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_info4"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:textSize="@dimen/h4"
            android:layout_marginBottom="@dimen/threspace"
            />
        <TextView
            android:textColor="@color/colorBlanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_info5"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:textSize="@dimen/h4"
            android:layout_marginBottom="@dimen/threspace"
            />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>